# CIP_FS2026_103

./: .gitattributes  .gitignore  CLAUDE.md  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
data/: icp_historical.csv
data/data_processed/: bitcoin_features.csv  icp_features.csv  xrp_features.csv
data/data_raw/: bitcoin_historical.csv  xrp_historical.csv
data/processed/: bitcoin_cleaned.csv  bitcoin_features.csv  icp_features.csv  internet-computer_cleaned.csv  internet-computer_features.csv  ripple_cleaned.csv  ripple_features.csv  xrp_features.csv
data/raw/: bitcoin.csv  bitcoin_historical.csv  icp_historical.csv  internet-computer.csv  ripple.csv  xrp_historical.csv
docs/: ai_disclosure.md  eda_report.md  feasibility_study_103.md  management_summary.md
docs/superpowers/plans/: 2026-03-20-crypto-pipeline.md
docs/superpowers/specs/: 2026-03-20-crypto-pipeline-design.md
latex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
latex/chapters/: 01_introduction.tex  02_methods.tex  03_discussion.tex  04_conclusion.tex
scraper/: scrapy.cfg
scraper/coingecko/: items.py  pipelines.py  settings.py
scraper/coingecko/spiders/: coingecko_spider.py
scripts/: run_binance_scrape.py  run_pipeline_binance.py
src/: coinmarket_eda.py  coinmarket_scrape.py  features.py  models.py  preprocessing.py
src/acquisition/binance/: client.py  endpoints.py  parser.py  save_raw.py  scraper.py
src/models/bitcoin/: config.py  (+5 more)
tests/: test_features.py  test_items.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_spider_parsing.py
(+5 files in other folders)
