[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cip-fs2026-103"
version = "0.1.0"
description = "Cryptocurrency price direction prediction — HSLU CIP FS2026 Group 103"
requires-python = ">=3.11"

dependencies = [
    # Data
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scipy==1.17.1",

    # ML
    "scikit-learn==1.8.0",

    # Visualisation
    "matplotlib==3.10.8",
    "seaborn==0.13.2",

    # Scraping
    "beautifulsoup4==4.14.3",
    "requests==2.32.5",
    "scrapy==2.13.0",
    "scrapy-playwright==0.0.43",
    "selenium==4.41.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cip-fs2026-103 = { path = ".", editable = true }

[tool.pixi.tasks]
